--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
- DATABASE =  mongodb+srv://ayishamarfi300:mern@cluster0.wui962j.mongodb.net/bookstore?retryWrites=true&w=majority&appName=Cluster0
+ DATABASE =  mongodb+srv://username:<pswrd>@cluster0.wui962j.mongodb.net/bookstore?retryWrites=true&w=majority&appName=Cluster0
